// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Footer checkGrammar 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkGrammar 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkGrammar 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkGrammar 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer className 1`] = `
<footer
  className="uu5-bricks-footer my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer content 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</footer>
`;

exports[`UU5.Bricks.Footer content 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</footer>
`;

exports[`UU5.Bricks.Footer content 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</footer>
`;

exports[`UU5.Bricks.Footer content 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</footer>
`;

exports[`UU5.Bricks.Footer controlled 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer controlled 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer controlled 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer controlled 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer default props 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled 4`] = `
<footer
  className="uu5-bricks-footer uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer docKit examples UU5.Bricks.Footer should render without crash 1`] = `undefined`;

exports[`UU5.Bricks.Footer dynamic 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer dynamic 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer dynamic 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer dynamic 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden 4`] = `
<footer
  className="uu5-bricks-footer uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer id 1`] = `
<footer
  className="uu5-bricks-footer"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 5`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 6`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 7`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 8`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 9`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 10`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 11`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 12`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 13`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 14`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 15`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 16`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 17`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 18`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 19`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 20`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 21`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 22`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 23`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 24`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 25`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 26`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 27`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level 28`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer mainAttrs 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer name 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 5`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 6`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 7`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 8`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 9`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 10`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 11`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 12`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 13`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 14`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 15`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 16`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 17`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 18`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 19`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel 20`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noIndex 1`] = `
<footer
  className="uu5-bricks-footer uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noIndex 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noIndex 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noIndex 4`] = `
<footer
  className="uu5-bricks-footer uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected 4`] = `
<footer
  className="uu5-bricks-footer uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector 2`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector 4`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer tooltip 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
